--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>fishies</title>
+  <title>fish tank</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
   <script src="js/pixi.min.js"></script>
